# fundamentos-algoritmos

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
site/: index.html
slides/html/: aula_01.html  aula_02.html
slides/md/: aula_01.html  aula_01.md  aula_02.md
