[tool.poetry]
name = "fundamentos-algoritmos"
version = "0.1.0"
description = ""
authors = ["Everson Otoni <everson.ott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.18"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
